--- a/_includes/utterance.html
+++ b/_includes/utterance.html
@@ -1,6 +1,6 @@
 <div id="comments" style="margin-top:2rem"></div>
 <script src="https://utteranc.es/client.js"
-  repo="<username>/<repo>"
+  repo="minininja-swag/date-blog"
   issue-term="pathname"
   label="💬 comment"
   theme="github-light"
