--- a/_layouts/date.html
+++ b/_layouts/date.html
@@ -4,7 +4,7 @@ layout: default
 <article>
   <h2>{{ page.title }}</h2>
   <p class="muted">
-    {{ page.date | date: "%B %d, %Y" }} · {{ page.location }}
+    {{ page.date | date: "%B %d, %Y" }}{% if page.location %} · {{ page.location }}{% endif %}
     {% if page.rating %} · ⭐ {{ page.rating }}/5{% endif %}
   </p>
 
@@ -19,6 +19,5 @@ layout: default
   </div>
 
   {% include gallery.html %}
-
   {% include utterances.html %}
 </article>
